{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 240,
  "lineage": "b298b2f6-4a4a-9712-0d03-6dc10a97a585",
  "resources": [
    {
      "module": "module.vpc.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3f602d23f1659d",
            "arn": "arn:aws:ec2:us-east-1:155988765466:instance/i-069419c0b81bf0d37",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069419c0b81bf0d37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028b6aa7f7d383d4d",
            "private_dns": "ip-172-20-10-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.128",
            "public_ip": "34.203.29.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0476f3cc1bf01c122",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da675bee8b4c477c",
            "tags": {
              "Name": "server1"
            },
            "tags_all": {
              "Name": "server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0431e2c3b814ba3a4"
            ]
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_security_group.vpc_project_security_group",
            "module.vpc.module.ec2.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_project_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:internet-gateway/igw-077774c005269dd54",
            "id": "igw-077774c005269dd54",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project_internet_gateway"
            },
            "tags_all": {
              "Name": "vpc_project_internet_gateway"
            },
            "vpc_id": "vpc-048a557f80494d875"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_project_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-08609fde7fbddb31e",
            "id": "rtb-08609fde7fbddb31e",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077774c005269dd54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_project_route_table"
            },
            "tags_all": {
              "Name": "VPC_project_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a557f80494d875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_project_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bf18c85f4db6d66",
            "route_table_id": "rtb-08609fde7fbddb31e",
            "subnet_id": "subnet-0da675bee8b4c477c"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.ec2.module.vpc.aws_route_table.vpc_project_routetable",
            "module.vpc.module.ec2.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_project_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-0431e2c3b814ba3a4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0431e2c3b814ba3a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_project_security_group",
            "name_prefix": "",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup_controll_traffic"
            },
            "tags_all": {
              "Name": "securitygroup_controll_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a557f80494d875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-0da675bee8b4c477c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da675bee8b4c477c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_project_subnet"
            },
            "tags_all": {
              "Name": "vpc_project_subnet"
            },
            "vpc_id": "vpc-048a557f80494d875"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:vpc/vpc-048a557f80494d875",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-04c004c0c9b104313",
            "default_route_table_id": "rtb-029e05fb5969ca17b",
            "default_security_group_id": "sg-0a5ac4c9e1080e878",
            "dhcp_options_id": "dopt-0386cf88d51777301",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048a557f80494d875",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029e05fb5969ca17b",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project"
            },
            "tags_all": {
              "Name": "vpc_project"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_project_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:internet-gateway/igw-0e0cbc09aec9ebd19",
            "id": "igw-0e0cbc09aec9ebd19",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project_internet_gateway"
            },
            "tags_all": {
              "Name": "vpc_project_internet_gateway"
            },
            "vpc_id": "vpc-0dc7dd737de80c4f0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_project_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-0b64b3016b44d9dae",
            "id": "rtb-0b64b3016b44d9dae",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0cbc09aec9ebd19",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_project_route_table"
            },
            "tags_all": {
              "Name": "VPC_project_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc7dd737de80c4f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_project_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb61d433bfac6c79",
            "route_table_id": "rtb-0b64b3016b44d9dae",
            "subnet_id": "subnet-0922043bf6d94ee9e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.vpc.aws_route_table.vpc_project_routetable",
            "module.vpc.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_project_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-0e85db57d144caea0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e85db57d144caea0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_project_security_group",
            "name_prefix": "",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup_controll_traffic"
            },
            "tags_all": {
              "Name": "securitygroup_controll_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc7dd737de80c4f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-0922043bf6d94ee9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0922043bf6d94ee9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_project_subnet"
            },
            "tags_all": {
              "Name": "vpc_project_subnet"
            },
            "vpc_id": "vpc-0dc7dd737de80c4f0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:vpc/vpc-0dc7dd737de80c4f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0c016e46e0b91e80d",
            "default_route_table_id": "rtb-0ef441d3ae47471cc",
            "default_security_group_id": "sg-0a2d1b4e0f10165c7",
            "dhcp_options_id": "dopt-0386cf88d51777301",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc7dd737de80c4f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef441d3ae47471cc",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project"
            },
            "tags_all": {
              "Name": "vpc_project"
            }
          }
        }
      ]
    }
  ]
}